--- a/app/src/main/res/layout/activity_animal_detail.xml
+++ b/app/src/main/res/layout/activity_animal_detail.xml
@@ -1,46 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightOrangeBackground"
+    android:background="@drawable/back"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/animalImage"
+    <!-- CardView for Animal Image -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardImageContainer"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:scaleType="centerCrop"
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="24dp"
+        android:background="#66000000"
+        app:cardElevation="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:transitionName="animalImageTransition"
-        android:contentDescription="Animal Image"/>
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <ImageView
+            android:id="@+id/animalImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:transitionName="animalImageTransition"
+            android:contentDescription="Animal Image" />
+    </androidx.cardview.widget.CardView>
+
+    <!-- Animal Name -->
     <TextView
         android:id="@+id/animalName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Animal Name"
-        android:textSize="24sp"
+        android:textSize="26sp"
         android:textStyle="bold"
-        android:textColor="@color/primaryDark"
+        android:fontFamily="sans-serif"
+        android:textColor="@android:color/white"
         android:gravity="center"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/animalImage"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/cardImageContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Animal Description -->
     <TextView
         android:id="@+id/animalDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Animal Description"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:fontFamily="sans-serif"
+        android:textColor="@android:color/white"
         android:layout_marginTop="12dp"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/animalName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
