--- a/app/src/main/res/layout/activity_item_video.xml
+++ b/app/src/main/res/layout/activity_item_video.xml
@@ -11,6 +11,8 @@
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtubePlayerView"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="200dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
 
 </androidx.cardview.widget.CardView>
