--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,14 @@
         android:id="@+id/lottieAnimationView"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        app:lottie_rawRes="@raw/raw1"
+        android:layout_marginBottom="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:lottie_rawRes="@raw/raw1" />
 
     <TextView
         android:id="@+id/taglineText"
@@ -25,7 +26,7 @@
         android:textColor="@android:color/white"
         android:textSize="28sp"
         android:alpha="0"
-        android:layout_marginLeft="35dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/lottieAnimationView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
